--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load thumbnail %}
+{% load cache %}
 {% block title %}
 Последние обновления на сайте
 {% endblock %}
@@ -7,27 +8,29 @@
   <div class="container py-5">
     <title>Последние обновления на сайте</title>
     {% include 'includes/switcher.html' %}
-    {% for post in page_obj %}
-      <article>
-        <ul>
-          <li>
-            Автор: {{ post.author.get_full_name }} <a href="{% url 'posts:profile' post.author.username %}"> все посты пользователя </a>
-          </li>
-          <li>
-            Дата публикации: {{ post.pub_date|date:"d E Y" }}
-          </li>
-        </ul>      
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-          <img class="card-img my-2" src="{{ im.url }}">
-        {% endthumbnail %}
-        <p>
-          {{ post.text }}
-        </p>
-        <a href="{% url 'posts:post_detail' post.id %}"> подробная информация </a>
-      </article>
-      {% if post.group %}<a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>{% endif %}
-      {% if not forloop.last %}<hr>{% endif %}
-    {% endfor %}
+    {% cache 20 index_page %}
+      {% for post in page_obj %}
+        <article>
+          <ul>
+            <li>
+              Автор: {{ post.author.get_full_name }} <a href="{% url 'posts:profile' post.author.username %}"> все посты пользователя </a>
+            </li>
+            <li>
+              Дата публикации: {{ post.pub_date|date:"d E Y" }}
+            </li>
+          </ul>      
+          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+            <img class="card-img my-2" src="{{ im.url }}">
+          {% endthumbnail %}
+          <p>
+            {{ post.text }}
+          </p>
+          <a href="{% url 'posts:post_detail' post.id %}"> подробная информация </a>
+        </article>
+        {% if post.group %}<a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>{% endif %}
+        {% if not forloop.last %}<hr>{% endif %}
+      {% endfor %}
+    {% endcache %}
   {% include 'includes/paginator.html' %}
   </div>
 {% endblock %}
