--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -8,7 +8,7 @@
     <div class="mb-5">
         <h1>Все посты пользователя {{username.first_name}} {{username.last_name}} </h1>  
         <h3>Всего постов: {{ posts_number }} </h3>
-        {% if request_user != username %}
+        {% if request.user != username %}
           {% if following %}
             <a
               class="btn btn-lg btn-light"
